tests/fixtures/valid/spaces-around-concat.php
<?php

declare(strict_types=1);

$var = 'bar';

echo 'foo' . $var;
