tests/fixtures/invalid/loose-comparison.php
<?php

declare(strict_types=1);

namespace Invalid;

$foo = 'foo' == 'bar';
